[package]
name = "ddnsv6"
version = "1.0.0"
authors = ["DosGo <dosgo@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.59", default-features = false}
get_if_addrs = {version="0.5.3",default-features = false}
minreq = { version = "2.4.2", features = ["https-native","json-using-serde"] }
dns-lookup = {version="1.0.7"}
getopts = "0.2"

[profile.release]
lto = true
panic = 'abort'
opt-level = "z"
codegen-units = 1